<resources>
    <string name="new_event">New Event</string>
    <string name="existing_event">Existing Event</string>

    <string name="event_info">Event Info</string>
    <string name="event">Event</string>
    <string name="time">Time</string>
    <string name="date">Date</string>

    <string name="frequency">Frequency</string>
    <string name="daily">Daily</string>
    <string name="hourly">Hourly</string>
    <string name="weekly">Weekly</string>

    <string name="user_info">User Info</string>
    <string name="user_name">User Name</string>

    <string name="id">ID</string>

    <string name="connecting">Connecting to Partner</string>
    <string name="close_connection">Close Connection</string>

    <string name="default_id">default</string>
    <string name="connected_var">connected</string>
    <string name="name_var">name</string>
    <string name="time_var">time</string>
    <string name="freq_var">freq</string>
    <string name="date_var">date</string>
    <string name="token_var">token</string>

    <string name="logo">logo</string>
    <string name="in_30m">in 30m</string>
    <string name="friend_s_reminder">Friend\'s Reminder</string>
    <string name="in_5m">in 5m</string>
    <string name="my_reminer">My Reminer</string>
</resources>
